compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> statement ;
Rule 7     instruction -> IF ( condition ) instruction ELSE instruction
Rule 8     instruction -> IF ( condition ) instruction
Rule 9     instruction -> FOR variable ASSIGN expression : expression instruction
Rule 10    instruction -> WHILE ( condition ) instruction
Rule 11    instruction -> { instructions }
Rule 12    statement -> PRINT expression
Rule 13    statement -> PRINT multiple_expressions
Rule 14    statement -> RETURN expression
Rule 15    statement -> RETURN
Rule 16    statement -> CONTINUE
Rule 17    statement -> BREAK
Rule 18    statement -> assignable ASSIGN expression
Rule 19    statement -> assignable ADDASSIGN expression
Rule 20    statement -> assignable SUBASSIGN expression
Rule 21    statement -> assignable MULASSIGN expression
Rule 22    statement -> assignable DIVASSIGN expression
Rule 23    condition -> expression EQ expression
Rule 24    condition -> expression GT expression
Rule 25    condition -> expression LT expression
Rule 26    condition -> expression GE expression
Rule 27    condition -> expression LE expression
Rule 28    condition -> expression NE expression
Rule 29    expression -> expression ADD expression
Rule 30    expression -> expression SUB expression
Rule 31    expression -> expression MUL expression
Rule 32    expression -> expression DIV expression
Rule 33    expression -> expression DOTADD expression
Rule 34    expression -> expression DOTSUB expression
Rule 35    expression -> expression DOTMUL expression
Rule 36    expression -> expression DOTDIV expression
Rule 37    expression -> SUB expression
Rule 38    expression -> expression TRANSPOSE
Rule 39    expression -> INTNUM
Rule 40    expression -> FLOATNUM
Rule 41    expression -> assignable
Rule 42    assignable -> variable
Rule 43    assignable -> reference
Rule 44    reference -> variable [ expression ]
Rule 45    reference -> variable [ multiple_expressions ]
Rule 46    variable -> ID
Rule 47    expression -> STRING
Rule 48    expression -> ( expression )
Rule 49    expression -> vector
Rule 50    expression -> matrix
Rule 51    matrix -> ONES ( expression )
Rule 52    matrix -> ONES ( expression , expression )
Rule 53    matrix -> ZEROS ( expression )
Rule 54    matrix -> ZEROS ( expression , expression )
Rule 55    matrix -> EYE ( expression )
Rule 56    matrix -> EYE ( expression , expression )
Rule 57    vector -> [ expression ]
Rule 58    vector -> [ multiple_expressions ]
Rule 59    multiple_expressions -> expression , expression
Rule 60    multiple_expressions -> multiple_expressions , expression

Terminals, with rules where they appear

(                    : 7 8 10 48 51 52 53 54 55 56
)                    : 7 8 10 48 51 52 53 54 55 56
,                    : 52 54 56 59 60
:                    : 9
;                    : 6
ADD                  : 29
ADDASSIGN            : 19
ASSIGN               : 9 18
BREAK                : 17
CONTINUE             : 16
DIV                  : 32
DIVASSIGN            : 22
DOTADD               : 33
DOTDIV               : 36
DOTMUL               : 35
DOTSUB               : 34
ELSE                 : 7
EQ                   : 23
EYE                  : 55 56
FLOATNUM             : 40
FOR                  : 9
GE                   : 26
GT                   : 24
ID                   : 46
IF                   : 7 8
INTNUM               : 39
LE                   : 27
LT                   : 25
MUL                  : 31
MULASSIGN            : 21
NE                   : 28
ONES                 : 51 52
PRINT                : 12 13
RETURN               : 14 15
STRING               : 47
SUB                  : 30 37
SUBASSIGN            : 20
TRANSPOSE            : 38
WHILE                : 10
ZEROS                : 53 54
[                    : 44 45 57 58
]                    : 44 45 57 58
error                : 
{                    : 11
}                    : 11

Nonterminals, with rules where they appear

assignable           : 18 19 20 21 22 41
condition            : 7 8 10
expression           : 9 9 12 14 18 19 20 21 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 38 44 48 51 52 52 53 54 54 55 56 56 57 59 59 60
instruction          : 4 5 7 7 8 9 10
instructions         : 2 4 11
instructions_opt     : 1
matrix               : 50
multiple_expressions : 13 45 58 60
program              : 0
reference            : 43
statement            : 6
variable             : 9 42 44 45
vector               : 49

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . statement ;
    (7) instruction -> . IF ( condition ) instruction ELSE instruction
    (8) instruction -> . IF ( condition ) instruction
    (9) instruction -> . FOR variable ASSIGN expression : expression instruction
    (10) instruction -> . WHILE ( condition ) instruction
    (11) instruction -> . { instructions }
    (12) statement -> . PRINT expression
    (13) statement -> . PRINT multiple_expressions
    (14) statement -> . RETURN expression
    (15) statement -> . RETURN
    (16) statement -> . CONTINUE
    (17) statement -> . BREAK
    (18) statement -> . assignable ASSIGN expression
    (19) statement -> . assignable ADDASSIGN expression
    (20) statement -> . assignable SUBASSIGN expression
    (21) statement -> . assignable MULASSIGN expression
    (22) statement -> . assignable DIVASSIGN expression
    (42) assignable -> . variable
    (43) assignable -> . reference
    (46) variable -> . ID
    (44) reference -> . variable [ expression ]
    (45) reference -> . variable [ multiple_expressions ]

    $end            reduce using rule 3 (instructions_opt -> .)
    IF              shift and go to state 15
    FOR             shift and go to state 6
    WHILE           shift and go to state 2
    {               shift and go to state 17
    PRINT           shift and go to state 13
    RETURN          shift and go to state 12
    CONTINUE        shift and go to state 9
    BREAK           shift and go to state 14
    ID              shift and go to state 8

    program                        shift and go to state 10
    instruction                    shift and go to state 4
    instructions_opt               shift and go to state 1
    variable                       shift and go to state 3
    assignable                     shift and go to state 11
    instructions                   shift and go to state 16
    reference                      shift and go to state 7
    statement                      shift and go to state 5

state 1

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 2

    (10) instruction -> WHILE . ( condition ) instruction

    (               shift and go to state 18


state 3

    (42) assignable -> variable .
    (44) reference -> variable . [ expression ]
    (45) reference -> variable . [ multiple_expressions ]

    :               reduce using rule 42 (assignable -> variable .)
    ADD             reduce using rule 42 (assignable -> variable .)
    SUB             reduce using rule 42 (assignable -> variable .)
    MUL             reduce using rule 42 (assignable -> variable .)
    DIV             reduce using rule 42 (assignable -> variable .)
    DOTADD          reduce using rule 42 (assignable -> variable .)
    DOTSUB          reduce using rule 42 (assignable -> variable .)
    DOTMUL          reduce using rule 42 (assignable -> variable .)
    DOTDIV          reduce using rule 42 (assignable -> variable .)
    TRANSPOSE       reduce using rule 42 (assignable -> variable .)
    ;               reduce using rule 42 (assignable -> variable .)
    ,               reduce using rule 42 (assignable -> variable .)
    EQ              reduce using rule 42 (assignable -> variable .)
    GT              reduce using rule 42 (assignable -> variable .)
    LT              reduce using rule 42 (assignable -> variable .)
    GE              reduce using rule 42 (assignable -> variable .)
    LE              reduce using rule 42 (assignable -> variable .)
    NE              reduce using rule 42 (assignable -> variable .)
    ]               reduce using rule 42 (assignable -> variable .)
    )               reduce using rule 42 (assignable -> variable .)
    IF              reduce using rule 42 (assignable -> variable .)
    FOR             reduce using rule 42 (assignable -> variable .)
    WHILE           reduce using rule 42 (assignable -> variable .)
    {               reduce using rule 42 (assignable -> variable .)
    PRINT           reduce using rule 42 (assignable -> variable .)
    RETURN          reduce using rule 42 (assignable -> variable .)
    CONTINUE        reduce using rule 42 (assignable -> variable .)
    BREAK           reduce using rule 42 (assignable -> variable .)
    ID              reduce using rule 42 (assignable -> variable .)
    ASSIGN          reduce using rule 42 (assignable -> variable .)
    ADDASSIGN       reduce using rule 42 (assignable -> variable .)
    SUBASSIGN       reduce using rule 42 (assignable -> variable .)
    MULASSIGN       reduce using rule 42 (assignable -> variable .)
    DIVASSIGN       reduce using rule 42 (assignable -> variable .)
    [               shift and go to state 19


state 4

    (5) instructions -> instruction .

    }               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    {               reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> statement . ;

    ;               shift and go to state 20


state 6

    (9) instruction -> FOR . variable ASSIGN expression : expression instruction
    (46) variable -> . ID

    ID              shift and go to state 8

    variable                       shift and go to state 21

state 7

    (43) assignable -> reference .

    :               reduce using rule 43 (assignable -> reference .)
    ADD             reduce using rule 43 (assignable -> reference .)
    SUB             reduce using rule 43 (assignable -> reference .)
    MUL             reduce using rule 43 (assignable -> reference .)
    DIV             reduce using rule 43 (assignable -> reference .)
    DOTADD          reduce using rule 43 (assignable -> reference .)
    DOTSUB          reduce using rule 43 (assignable -> reference .)
    DOTMUL          reduce using rule 43 (assignable -> reference .)
    DOTDIV          reduce using rule 43 (assignable -> reference .)
    TRANSPOSE       reduce using rule 43 (assignable -> reference .)
    ;               reduce using rule 43 (assignable -> reference .)
    ,               reduce using rule 43 (assignable -> reference .)
    EQ              reduce using rule 43 (assignable -> reference .)
    GT              reduce using rule 43 (assignable -> reference .)
    LT              reduce using rule 43 (assignable -> reference .)
    GE              reduce using rule 43 (assignable -> reference .)
    LE              reduce using rule 43 (assignable -> reference .)
    NE              reduce using rule 43 (assignable -> reference .)
    ]               reduce using rule 43 (assignable -> reference .)
    )               reduce using rule 43 (assignable -> reference .)
    IF              reduce using rule 43 (assignable -> reference .)
    FOR             reduce using rule 43 (assignable -> reference .)
    WHILE           reduce using rule 43 (assignable -> reference .)
    {               reduce using rule 43 (assignable -> reference .)
    PRINT           reduce using rule 43 (assignable -> reference .)
    RETURN          reduce using rule 43 (assignable -> reference .)
    CONTINUE        reduce using rule 43 (assignable -> reference .)
    BREAK           reduce using rule 43 (assignable -> reference .)
    ID              reduce using rule 43 (assignable -> reference .)
    ASSIGN          reduce using rule 43 (assignable -> reference .)
    ADDASSIGN       reduce using rule 43 (assignable -> reference .)
    SUBASSIGN       reduce using rule 43 (assignable -> reference .)
    MULASSIGN       reduce using rule 43 (assignable -> reference .)
    DIVASSIGN       reduce using rule 43 (assignable -> reference .)


state 8

    (46) variable -> ID .

    [               reduce using rule 46 (variable -> ID .)
    ADD             reduce using rule 46 (variable -> ID .)
    SUB             reduce using rule 46 (variable -> ID .)
    MUL             reduce using rule 46 (variable -> ID .)
    DIV             reduce using rule 46 (variable -> ID .)
    DOTADD          reduce using rule 46 (variable -> ID .)
    DOTSUB          reduce using rule 46 (variable -> ID .)
    DOTMUL          reduce using rule 46 (variable -> ID .)
    DOTDIV          reduce using rule 46 (variable -> ID .)
    TRANSPOSE       reduce using rule 46 (variable -> ID .)
    )               reduce using rule 46 (variable -> ID .)
    :               reduce using rule 46 (variable -> ID .)
    ,               reduce using rule 46 (variable -> ID .)
    ;               reduce using rule 46 (variable -> ID .)
    EQ              reduce using rule 46 (variable -> ID .)
    GT              reduce using rule 46 (variable -> ID .)
    LT              reduce using rule 46 (variable -> ID .)
    GE              reduce using rule 46 (variable -> ID .)
    LE              reduce using rule 46 (variable -> ID .)
    NE              reduce using rule 46 (variable -> ID .)
    ]               reduce using rule 46 (variable -> ID .)
    IF              reduce using rule 46 (variable -> ID .)
    FOR             reduce using rule 46 (variable -> ID .)
    WHILE           reduce using rule 46 (variable -> ID .)
    {               reduce using rule 46 (variable -> ID .)
    PRINT           reduce using rule 46 (variable -> ID .)
    RETURN          reduce using rule 46 (variable -> ID .)
    CONTINUE        reduce using rule 46 (variable -> ID .)
    BREAK           reduce using rule 46 (variable -> ID .)
    ID              reduce using rule 46 (variable -> ID .)
    ASSIGN          reduce using rule 46 (variable -> ID .)
    ADDASSIGN       reduce using rule 46 (variable -> ID .)
    SUBASSIGN       reduce using rule 46 (variable -> ID .)
    MULASSIGN       reduce using rule 46 (variable -> ID .)
    DIVASSIGN       reduce using rule 46 (variable -> ID .)


state 9

    (16) statement -> CONTINUE .

    ;               reduce using rule 16 (statement -> CONTINUE .)


state 10

    (0) S' -> program .



state 11

    (18) statement -> assignable . ASSIGN expression
    (19) statement -> assignable . ADDASSIGN expression
    (20) statement -> assignable . SUBASSIGN expression
    (21) statement -> assignable . MULASSIGN expression
    (22) statement -> assignable . DIVASSIGN expression

    ASSIGN          shift and go to state 25
    ADDASSIGN       shift and go to state 26
    SUBASSIGN       shift and go to state 24
    MULASSIGN       shift and go to state 23
    DIVASSIGN       shift and go to state 22


state 12

    (14) statement -> RETURN . expression
    (15) statement -> RETURN .
    (29) expression -> . expression ADD expression
    (30) expression -> . expression SUB expression
    (31) expression -> . expression MUL expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression DOTADD expression
    (34) expression -> . expression DOTSUB expression
    (35) expression -> . expression DOTMUL expression
    (36) expression -> . expression DOTDIV expression
    (37) expression -> . SUB expression
    (38) expression -> . expression TRANSPOSE
    (39) expression -> . INTNUM
    (40) expression -> . FLOATNUM
    (41) expression -> . assignable
    (47) expression -> . STRING
    (48) expression -> . ( expression )
    (49) expression -> . vector
    (50) expression -> . matrix
    (42) assignable -> . variable
    (43) assignable -> . reference
    (57) vector -> . [ expression ]
    (58) vector -> . [ multiple_expressions ]
    (51) matrix -> . ONES ( expression )
    (52) matrix -> . ONES ( expression , expression )
    (53) matrix -> . ZEROS ( expression )
    (54) matrix -> . ZEROS ( expression , expression )
    (55) matrix -> . EYE ( expression )
    (56) matrix -> . EYE ( expression , expression )
    (46) variable -> . ID
    (44) reference -> . variable [ expression ]
    (45) reference -> . variable [ multiple_expressions ]

    ;               reduce using rule 15 (statement -> RETURN .)
    SUB             shift and go to state 32
    INTNUM          shift and go to state 37
    FLOATNUM        shift and go to state 29
    STRING          shift and go to state 28
    (               shift and go to state 39
    [               shift and go to state 31
    ONES            shift and go to state 36
    ZEROS           shift and go to state 30
    EYE             shift and go to state 35
    ID              shift and go to state 8

    matrix                         shift and go to state 38
    assignable                     shift and go to state 34
    variable                       shift and go to state 3
    vector                         shift and go to state 33
    expression                     shift and go to state 27
    reference                      shift and go to state 7

state 13

    (12) statement -> PRINT . expression
    (13) statement -> PRINT . multiple_expressions
    (29) expression -> . expression ADD expression
    (30) expression -> . expression SUB expression
    (31) expression -> . expression MUL expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression DOTADD expression
    (34) expression -> . expression DOTSUB expression
    (35) expression -> . expression DOTMUL expression
    (36) expression -> . expression DOTDIV expression
    (37) expression -> . SUB expression
    (38) expression -> . expression TRANSPOSE
    (39) expression -> . INTNUM
    (40) expression -> . FLOATNUM
    (41) expression -> . assignable
    (47) expression -> . STRING
    (48) expression -> . ( expression )
    (49) expression -> . vector
    (50) expression -> . matrix
    (59) multiple_expressions -> . expression , expression
    (60) multiple_expressions -> . multiple_expressions , expression
    (42) assignable -> . variable
    (43) assignable -> . reference
    (57) vector -> . [ expression ]
    (58) vector -> . [ multiple_expressions ]
    (51) matrix -> . ONES ( expression )
    (52) matrix -> . ONES ( expression , expression )
    (53) matrix -> . ZEROS ( expression )
    (54) matrix -> . ZEROS ( expression , expression )
    (55) matrix -> . EYE ( expression )
    (56) matrix -> . EYE ( expression , expression )
    (46) variable -> . ID
    (44) reference -> . variable [ expression ]
    (45) reference -> . variable [ multiple_expressions ]

    SUB             shift and go to state 32
    INTNUM          shift and go to state 37
    FLOATNUM        shift and go to state 29
    STRING          shift and go to state 28
    (               shift and go to state 39
    [               shift and go to state 31
    ONES            shift and go to state 36
    ZEROS           shift and go to state 30
    EYE             shift and go to state 35
    ID              shift and go to state 8

    matrix                         shift and go to state 38
    assignable                     shift and go to state 34
    multiple_expressions           shift and go to state 41
    variable                       shift and go to state 3
    vector                         shift and go to state 33
    expression                     shift and go to state 40
    reference                      shift and go to state 7

state 14

    (17) statement -> BREAK .

    ;               reduce using rule 17 (statement -> BREAK .)


state 15

    (7) instruction -> IF . ( condition ) instruction ELSE instruction
    (8) instruction -> IF . ( condition ) instruction

    (               shift and go to state 42


state 16

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . statement ;
    (7) instruction -> . IF ( condition ) instruction ELSE instruction
    (8) instruction -> . IF ( condition ) instruction
    (9) instruction -> . FOR variable ASSIGN expression : expression instruction
    (10) instruction -> . WHILE ( condition ) instruction
    (11) instruction -> . { instructions }
    (12) statement -> . PRINT expression
    (13) statement -> . PRINT multiple_expressions
    (14) statement -> . RETURN expression
    (15) statement -> . RETURN
    (16) statement -> . CONTINUE
    (17) statement -> . BREAK
    (18) statement -> . assignable ASSIGN expression
    (19) statement -> . assignable ADDASSIGN expression
    (20) statement -> . assignable SUBASSIGN expression
    (21) statement -> . assignable MULASSIGN expression
    (22) statement -> . assignable DIVASSIGN expression
    (42) assignable -> . variable
    (43) assignable -> . reference
    (46) variable -> . ID
    (44) reference -> . variable [ expression ]
    (45) reference -> . variable [ multiple_expressions ]

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    IF              shift and go to state 15
    FOR             shift and go to state 6
    WHILE           shift and go to state 2
    {               shift and go to state 17
    PRINT           shift and go to state 13
    RETURN          shift and go to state 12
    CONTINUE        shift and go to state 9
    BREAK           shift and go to state 14
    ID              shift and go to state 8

    instruction                    shift and go to state 43
    assignable                     shift and go to state 11
    variable                       shift and go to state 3
    reference                      shift and go to state 7
    statement                      shift and go to state 5

state 17

    (11) instruction -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . statement ;
    (7) instruction -> . IF ( condition ) instruction ELSE instruction
    (8) instruction -> . IF ( condition ) instruction
    (9) instruction -> . FOR variable ASSIGN expression : expression instruction
    (10) instruction -> . WHILE ( condition ) instruction
    (11) instruction -> . { instructions }
    (12) statement -> . PRINT expression
    (13) statement -> . PRINT multiple_expressions
    (14) statement -> . RETURN expression
    (15) statement -> . RETURN
    (16) statement -> . CONTINUE
    (17) statement -> . BREAK
    (18) statement -> . assignable ASSIGN expression
    (19) statement -> . assignable ADDASSIGN expression
    (20) statement -> . assignable SUBASSIGN expression
    (21) statement -> . assignable MULASSIGN expression
    (22) statement -> . assignable DIVASSIGN expression
    (42) assignable -> . variable
    (43) assignable -> . reference
    (46) variable -> . ID
    (44) reference -> . variable [ expression ]
    (45) reference -> . variable [ multiple_expressions ]

    IF              shift and go to state 15
    FOR             shift and go to state 6
    WHILE           shift and go to state 2
    {               shift and go to state 17
    PRINT           shift and go to state 13
    RETURN          shift and go to state 12
    CONTINUE        shift and go to state 9
    BREAK           shift and go to state 14
    ID              shift and go to state 8

    instruction                    shift and go to state 4
    assignable                     shift and go to state 11
    variable                       shift and go to state 3
    instructions                   shift and go to state 44
    reference                      shift and go to state 7
    statement                      shift and go to state 5

state 18

    (10) instruction -> WHILE ( . condition ) instruction
    (23) condition -> . expression EQ expression
    (24) condition -> . expression GT expression
    (25) condition -> . expression LT expression
    (26) condition -> . expression GE expression
    (27) condition -> . expression LE expression
    (28) condition -> . expression NE expression
    (29) expression -> . expression ADD expression
    (30) expression -> . expression SUB expression
    (31) expression -> . expression MUL expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression DOTADD expression
    (34) expression -> . expression DOTSUB expression
    (35) expression -> . expression DOTMUL expression
    (36) expression -> . expression DOTDIV expression
    (37) expression -> . SUB expression
    (38) expression -> . expression TRANSPOSE
    (39) expression -> . INTNUM
    (40) expression -> . FLOATNUM
    (41) expression -> . assignable
    (47) expression -> . STRING
    (48) expression -> . ( expression )
    (49) expression -> . vector
    (50) expression -> . matrix
    (42) assignable -> . variable
    (43) assignable -> . reference
    (57) vector -> . [ expression ]
    (58) vector -> . [ multiple_expressions ]
    (51) matrix -> . ONES ( expression )
    (52) matrix -> . ONES ( expression , expression )
    (53) matrix -> . ZEROS ( expression )
    (54) matrix -> . ZEROS ( expression , expression )
    (55) matrix -> . EYE ( expression )
    (56) matrix -> . EYE ( expression , expression )
    (46) variable -> . ID
    (44) reference -> . variable [ expression ]
    (45) reference -> . variable [ multiple_expressions ]

    SUB             shift and go to state 32
    INTNUM          shift and go to state 37
    FLOATNUM        shift and go to state 29
    STRING          shift and go to state 28
    (               shift and go to state 39
    [               shift and go to state 31
    ONES            shift and go to state 36
    ZEROS           shift and go to state 30
    EYE             shift and go to state 35
    ID              shift and go to state 8

    matrix                         shift and go to state 38
    assignable                     shift and go to state 34
    condition                      shift and go to state 45
    variable                       shift and go to state 3
    vector                         shift and go to state 33
    expression                     shift and go to state 46
    reference                      shift and go to state 7

state 19

    (44) reference -> variable [ . expression ]
    (45) reference -> variable [ . multiple_expressions ]
    (29) expression -> . expression ADD expression
    (30) expression -> . expression SUB expression
    (31) expression -> . expression MUL expression
    (32) expression -> . expression DIV expression
    (33) expression -> . expression DOTADD expression
    (34) expression -> . expression DOTSUB expression
    (35) expression -> . expression DOTMUL expression
    (36) expression -> . expression DOTDIV expression
    (37) expression -> . SUB expression
    (38) expression -> . expression TRANSPOSE
    (39) expression -> . INTNUM
    (40) expression -> . FLOATNUM
    (41) expression -> . assignable
    (47) expression -> . STRING
    (48) expression -> . ( expression )
    (49) expression -> . vector
    (50) expression -> . matrix
    (59) multiple_expressions -> . expression , expression
    (60) multiple_expressions -> . multiple_expressions , expression
    (42) assignable -> . variable
    (43) assignable -> . reference
    (57) vector -> . [ expression ]
    (58) vector -> . [ multiple_expressions ]
    (51) matrix -> . ONES ( expression )
    (52) matrix -> . ONES ( expression , expression )
    (53) matrix -> . ZEROS ( expression )
    (54) matrix -> . ZEROS ( expression , expression )
    (55) matrix -> . EYE ( expression )
    (56) matrix -> . EYE ( expression , expression )
    (46) variable -> . ID
    (44) reference -> . variable [ expression ]
    (45) reference -> . variable [ multiple_expressions ]

    SUB             shift and go to state 32
    INTNUM          shift and go to state 37
    FLOATNUM        shift and go to state 29
    STRING          shift and go to state 28
    (               shift and go to state 39
    [               shift and go to state 31
    ONES            shift and go to state 36
    ZEROS           shift and go to state 30
    EYE             shift and go to state 35
    ID              shift and go to state 8

    matrix                         shift and go to state 38
    assignable                     shift and go to state 34
    multiple_expressions           shift and go to state 48
    variable                       shift and go to state 3
    vector                         shift and go to state 33
    expression                     shift and go to state 47
    reference                      shift and go to state 7

state 20

    (6) instruction -> statement ; .
